# claim-chain-ph

./: .gitignore  Cargo.toml  README.md  package-lock.json
.cargo/: config.toml
frontend/: .env  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: AdminPanel.jsx  ClaimSubmit.jsx  Dashboard.jsx  Navbar.jsx  PolicyRegister.jsx  PremiumPayment.jsx  WalletConnect.jsx
frontend/src/services/: contract.js  stellar.js
frontend/src/utils/: format.js  hash.js
src/: lib.rs  test.rs
test_snapshots/test/: test_duplicate_policy_registration_rejected.1.json  test_happy_path_policy_registration_and_claim.1.json  test_state_verification_after_registration.1.json
